# OtusCpp

./: .gitmodules  .travis.yml  CMakeLists.txt  main.cpp  test_version.cpp  version.h.in
cmake/: googletest-download.cmake
gtests/: CMakeLists.txt  versionTest.cpp
lesson_02/source/: decltype.cpp  header.h
lesson_03/source/: CMakeLists.txt  aggregate.cpp  decltype.cpp  lambda.cpp  perfect.cpp  rvo.cpp  vt.cpp
lesson_04/source/: CMakeLists.txt  assert.cpp  brace.cpp  class.cpp  ctor.cpp  move.cpp  nullptr.cpp  using.cpp
lesson_05/source/: CMakeLists.txt  custom_shared.cpp  enable_shared_from_this.cpp  lifetime.cpp  shared_ptr.cpp
lesson_06_allocators/source/: CMakeLists.txt
lesson_07/source/: fold.cpp  lambda.cpp  trigraph.cpp
lesson_08/source/: constexpr  filesystem.cpp  header.h  initializers  inline.cpp  structured_bindings  structured_bindings.cpp
lesson_09/source/: begin.cpp  optional.cpp
lessons/lesson_02/source/: CMakeLists.txt  auto.cpp  lambda.cpp  source.cpp  tuple.cpp
lessons/lesson_03/source/: move.cpp  values.cpp
lessons/lesson_04_utils/source/: binary.cpp  constexpr.cpp  enum.cpp  for.cpp  literal.cpp
lessons/lesson_05_smart_pointers/source/: arrays.cpp  custom_unique.cpp  cycle_ref.cpp  scope.cpp  unique_ptr.cpp  weak_ptr.cpp
lessons/lesson_06_allocators/source/: allocator.cpp
lessons/lesson_07/source/: CMakeLists.txt  attributes.cpp  auto_template.cpp  ctor.cpp  deduction.cpp  structured_bindings.cpp
lessons/lesson_08_utils/source/: CMakeLists.txt  constexpr.cpp  initializers.cpp  trigraph.cpp  ub.cpp
lessons/lesson_09_templates/source/: CMakeLists.txt  any.cpp  metafunctions.cpp  sfinae.cpp  variant.cpp
lessons/lesson_10_design/source/: CMakeLists.txt  dependency_inversion.cpp  dry.cpp  map.cpp  tda.cpp
lessons/lesson_12_GOF_creation/source/: abstract_factory.cpp  builder.cpp  dependency_injection.cpp  factory_method.cpp  lazy_initialization.cpp  multiton.cpp  object_pool.cpp  prototype.cpp  singleton.cpp
libs/: CMakeLists.txt  versionLib.cpp  versionLib.h
libs/ipAddressesLib/: CMakeLists.txt  ipAddresses.cpp  ipAddresses.h
libs/versionLib/: CMakeLists.txt  versionLib.cpp
src/: CMakeLists.txt  coloredCout.h  customAllocator.h  customContainer.h  intWrapper.h  main.cpp
tests/: CMakeLists.txt  test_version.cpp
unitTests/: CMakeLists.txt
